[gd_scene load_steps=3 format=3 uid="uid://dnw6vlgcwk5dm"]

[ext_resource type="Script" path="res://plants/Plant.gd" id="1_738ou"]
[ext_resource type="Texture2D" uid="uid://b315b8nltc6ku" path="res://Sprites/Lettuce-Alpha-Testing.svg" id="2_tpjdl"]

[node name="Plant" type="Node2D"]
script = ExtResource("1_738ou")

[node name="plant_stage_1" type="Sprite2D" parent="."]

[node name="plant_stage_2" type="Sprite2D" parent="."]
texture = ExtResource("2_tpjdl")

[node name="plant_stage_3" type="Sprite2D" parent="."]
texture = ExtResource("2_tpjdl")
